# SF_analysis_software_v2.0

./: .gitignore  CMakeLists.txt  README.md  noLuckCMake.txt  sourceMods.txt  test_config.json
config/: post_cuts_eppi0.json
docs/: analysis_pipeline.md
include/: Config.h  Cuts.h  PhysicalConstants.h  ROOTBranches.h  ROOTBranchesLinkDef.h
src/: Cuts.cpp  ROOTBranches.cpp  apply_cuts.cpp  hipo2root.cpp
